# graph_visualization

./: .gitignore  CMakeLists.txt  Makefile  README.md  conan.md  dokumentacja_koncowa.md  dokumentacja_wstepna.md  doxygen.md  gui.py  math.cpp  pdm.md  projekt_readme.md  szkielet_aplikacji.md
cpp/: .clang-format  .clang-format-ignore  CMakeLists.txt  conanfile.txt
cpp/app/: CMakeLists.txt  GraphManager.cpp  GraphManager.hpp  GraphManager_py.cpp  PluginInterface.hpp  PluginManager.cpp  graph_manager.cpp  graph_manager.hpp  graph_manager_py.cpp  math.cpp  math.hpp  math_py.cpp  plugin.cpp  plugin_circular.cpp  plugin_interface.hpp
cpp/app/plugins/: CMakeLists.txt  plugin.cpp
cpp/app/plugins/circular/: CMakeLists.txt  plugin_circular.cpp
cpp/app/plugins/grid/: CMakeLists.txt  plugin_grid.cpp
cpp/tests/: CMakeLists.txt  tests.cpp
cpp/tests/test_graphs/: graph1.graphml  graph2.graphml  graph_test.graphml  graph_test_2.graphml  graph_test_3.graphml  graph_test_4.graphml  graph_test_5.graphml  graph_test_6.graphml
docs/: Doxyfile
example_graphs/: graph1.graphml  graph2.graphml  new_graph.graphml
helpers/: tests.md
python/: pyproject.toml
python/src/graph_viewer/: GraphViewer.py  gui.py  main.py
