[project]
name = "graph_viewer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "jkedzier", email = "jedrzej.kedzierski.stud@pw.edu.pl"},
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
test = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
lint = [
    "flake8>=7.1.1",
]
format = [
    "black>=24.10.0"
]

[tool.pdm.scripts]
format = "black ./src ./tests"
lint = "flake8 ./src ./tests"
